Fix oversized figcaption on mobile layouts

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -247,6 +247,7 @@ summary {
 
     p,
     li,
+    figcaption,
     td {
         font-size: 0.8em;
     }
